--- a/default.css
+++ b/default.css
@@ -493,7 +493,7 @@
 	#featured
 	{
 		height: 30em;
-		background-image: url(images/banner.jpg);
+		background-image: url(banner.jpg);
 		background-position: center;
 		background-size: contain;
 	}
